Fri Jan 27 18:36:46 GMT 2006 Jim Segrave <jes@jes-2.demon.nl>
	* play.c - don't do anything to undock panels in CLI mode
	
Sat Dec 17 -3:31:09 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
	* gtkchequer.c - CreateMoveListTools() must be called before
	  calling MoveListCreate(), otherwise coredumps can result
	
Sat Dec 17 -1:22:09 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>
	* html.c - copy basemane() from simplelibgen.c to
	  get_basename(), as basename() is not promised to be
	  re-entrant. This caused all the links between html game
	  files to be set to the last call to basename()
	
Thu Dec 12 13:23:12 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	    *eval.c change assembler code labels to locals. gcc 3.42 saw
	    labels as redfined. I don't know what this will do to MS
	    compilers
	    or the Intel compiler.
	    
Fri Nov 18 16:38:11 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	*gtktexi.c - make inclusion of io.h dependent on not having 
	 unistd.h, as done in other routines (io.h is a Windows-only 
	 header)
	
Mon Sep 19 22:37:25 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	* relational.c, gtkgame.c - don't reference non-existent gtk
	  objects
	  postgresql does not accept queries in the form
	  SELECT column from A INNER JOIN B INNER JOIN C 
	    ON A.id1 = B.id1 AND B.id2 = C.id2

	  must be
	  SELECT column from A INNER JOIN B ON A.id1 = B.id1
	    INNER JOIN C ON B.id2 = C.id2

Sun Sep 18 14:10:02 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.game.sql, gnubg.game.mysql - create databases with tables
	  for game statistics
	* database - sample database configuration file
	
Mon Aug 29 15:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkchequer.c (and a few others), gtkmovelist(.h, .c, ctrl.c) - new files
		Added win/loss stats to movelist

Fri Aug  5 11:45:31 2005 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gtkexport.c - fix to skip SKILL_GOOD for cube decisions
	
Sun May  8 12:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
